[package]
name = "kcapi"
version = "0.1.5"
edition = "2018"
license = "BSD-3-Clause"
description = "Official high-level rust bindings for libkcapi"
homepage = "https://github.com/puru1761/kcapi"
repository = "https://github.com/puru1761/kcapi"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kcapi-sys = { version = "1.4.1", path = "kcapi-sys", default-features = false }
libc = { version = "0.2.107" }

[features]
default = ["vendored-kcapi"]
vendored-kcapi = ["kcapi-sys/vendored-kcapi"]
local-kcapi = ["kcapi-sys/local-kcapi"]